// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response JSON 1`] = `"application/json; charset=utf-8"`;

exports[`Response JSON 2`] = `
Object {
  "Content-Type": "application/json; charset=utf-8",
}
`;

exports[`Response JSON 3`] = `"{\\"foo\\":\\"bar\\"}"`;

exports[`Response Main 1`] = `"text/plain; charset=utf-8"`;

exports[`Response Main 2`] = `
Object {
  "Content-Type": "text/plain; charset=utf-8",
  "foo": "123",
}
`;

exports[`Response Redirect 1`] = `
Object {
  "Content-Type": "text/plain; charset=utf-8",
  "location": "/redirect",
}
`;
